--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 
-
-<hr>
 <body>
-<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, eius accusantium fugit error totam libero maxime doloremque corrupti nam quo?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, eius accusantium fugit error totam libero maxime doloremque corrupti nam quo?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, placeat!</p>
+    <section id="home">
+        <h1>Home</h1>
+        <p id="title" class="heading red"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, eius accusantium fugit error totam libero maxime doloremque corrupti nam quo?</p>
+        <a href="#info">Go to Info</a>
+    </section>
+    <section id="info">
+        <h1>Info</h1>
+        <p class="red">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, eius accusantium fugit error totam libero maxime doloremque corrupti nam quo?</p>
+        <a href="#footer">Go to footer</a>
+    </section>
+    <section id="footer">
+        <h1>Footer</h1>
+        <p class="blue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, placeat!</p>
+        <a href="#home">Back to top</a>
+    </section>
 </body>
  
-<hr>
+
 </html>
