--- a/index.html
+++ b/index.html
@@ -9,21 +9,9 @@
 </head>
 
 <body>
-    <section id="home">
-        <h1>Home</h1>
-        <p id="title" class="heading red"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, eius accusantium fugit error totam libero maxime doloremque corrupti nam quo?</p>
-        <a href="#info">Go to Info</a>
-    </section>
-    <section id="info">
-        <h1>Info</h1>
-        <p class="red">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, eius accusantium fugit error totam libero maxime doloremque corrupti nam quo?</p>
-        <a href="#footer">Go to footer</a>
-    </section>
-    <section id="footer">
-        <h1>Footer</h1>
-        <p class="blue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, placeat!</p>
-        <a href="#home">Back to top</a>
-    </section>
+<div class="box"></div>
+<div class="box"></div>
+
 </body>
  
 
