--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <p>Hello world</p>
     <span>My name</span>
     <span>is Aabhushan</span>
+
+
+    <html>
+        <canvas id="Click here"></canvas><br>
+        <button onclick="lineFunction()">Click here.</button>
+      </html>
+
+
 </body>
  
 
