--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       </html>
 
 
+      <div class="buttons">
+        <div class="circle-button">
+          eee
+        </div>
+      </div>
+
 </body>
  
 
