--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 
     <html>
         <canvas id="Click here"></canvas><br>
-        <button onclick="lineFunction()">Click here.</button>
+        <button onclick="lineFunction()">Click here to start.</button>
       </html>
       
-
+ <canvas id="Click here"></canvas><br>
+        <button onclick="lineFunction()">Click here to go back.</button>
+      </html>
       
 <h1>Get link </h1>
 <div class="white-box">
